# pokered-c

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  tmp_trainer_extract.json  tmp_trainer_extract_remaining.json
.obsidian/: workspace.json
archive/: README.md
archive/review-pending/2026-05-07_tree_cleanup_pass1/: README.md  bio_continuum.jsonl  gaia_homecoming.jsonl  gcc_battle.txt  sessionresume.txt
bugs/: cli_cmd.txt  fulllogwrongbattles.txt  oakslab_postbattle_timing_staged.md  release_ledger_2026-04-13.md  textbox_vertical_offset_staged.md  wrongbattlestriggeringeventflags.txt
bugs/scenes/: npc_walkoff.scene
debug/.obsidian/: workspace.json
debug/scenes/: lance_persist_dialog.scene
docs/: asm_c_battle_animation_atlas.md  asm_dependency_chain_post_lt_surge.md  asm_dependency_chain_post_lt_surge_checklist.csv  asm_event_flag_c_touchpoint_checklist.md  asm_event_flag_structure_start_to_champion.md  asm_script_gap_detail_v5.md  asm_script_to_c_owner_matrix.md  asm_script_to_c_owner_matrix_v2.md  asm_translation_archaeology_rows_post_lt_surge.csv  celadoncity_parity_checklist_v1.md  effect_audit_two_to_five_attacks.md  mtmoon1f_parity_checklist_v1.md  npc-post-battle-reposition.md  pewtercity_parity_checklist_v1.md  powerplant_parity_checklist_v1.md  route25_parity_checklist_v1.md  route6_parity_checklist_v1.md  saffroncity_parity_checklist_v1.md  saffrongym_parity_checklist_v1.md  silphco2f_parity_checklist_v1.md  silphco5f_parity_checklist_v1.md  silphco7f_parity_checklist_v1.md  ssanne2f_parity_checklist_v1.md  ssanne2frooms_parity_checklist_v1.md  ssanneb1f_parity_checklist_v1.md  timing_conversion_protocol.md  vermilioncity_parity_checklist_v1.md  viridianforest_parity_checklist_v1.md
docs/asm/: trainer_parity_audit_routes_caves.md
docs/asm/archaeology/: asm_translation_archaeology_guide.md
docs/asm/coverage-matrix/: asm_c_structure_coverage_ledger.md  asm_script_to_c_owner_matrix.csv  asm_script_to_c_owner_matrix_v2.csv  asm_script_to_c_owner_matrix_v3.csv  asm_script_to_c_owner_matrix_v3.md
docs/asm/gap-analysis/: asm_investigation_queue_v1.csv  asm_investigation_queue_v1.md  asm_script_gap_detail_v4.csv  asm_script_gap_detail_v4.md  asm_script_gap_detail_v5.csv
docs/battle/animations/: move_anim_asm_gap_report.md  move_animation_pipeline_integration_plan.md  move_animation_recent_bug_diagnostics.md  move_animation_translation_spec.md
docs/battle/effects-audit/: effect_audit_charge_fly.md  effect_audit_hyper_beam_recharge.md  effect_audit_stat_modifier_badge_hooks.md  effect_audit_stat_modifier_down.md  effect_audit_stat_modifier_up.md  effect_audit_trapping.md  move_db_effects_atlas_diff_2026-05-03.md  move_effect_handler_audit_matrix.md
docs/battle/plans-and-regressions/: battle_renderer_parity_plan.md  bonemerang_asm_trace.md  move_anim_phase4_regression.md
docs/debug-and-tooling/: debug_cli_recommended_test_flows.md  debug_cli_scene_dsl.md  debug_cli_scene_dsl_architecture.md  debug_cli_tools_guide.md  game_cli_commands.md  pokered-build.md
docs/dev notes/: fighting_dojo_checklist.md  saffron_celadon_checklist.md
docs/parity/map-checklists/: celadonmart3f_parity_checklist_v1.md  (+7 more)
docs/story-and-scripting/: gym-leader-sequence.md
docs/workflows-and-protocols/: dialog-option-selection-protocol.md  one-time-gift-flow-protocol.md  trainer-npc-battle-flow-protocol.md
plugins/mnemo/: .mcp.json
src/: main.c
src/data/: base_stats.c  base_stats.h  bike_sprite.c  bike_sprite.h  connection_data.c  connection_data.h  cry_data.c  cry_data.h  dex_data.c  dex_data.h  event_constants.h  event_data.c  event_data.h  event_flag_names.h  evos_moves_data.c  evos_moves_data.h  font_data.c  font_data.h  ghost_front_sprite.c  ghost_front_sprite.h  intro_scene_data.c  intro_scene_data.h  item_data_gen.h  map_data.c  map_data.h  move_anim_basecoords.c  move_anim_basecoords.h  move_anim_frameblocks.c  move_anim_frameblocks.h  move_anim_scripts.c  move_anim_scripts.h  move_anim_subanims.c  move_anim_subanims.h  move_anim_tiles.c  move_anim_tiles.h  move_sfx_data.c  move_sfx_data.h  move_sfx_structs.c  move_sfx_structs.h  moves_data.c  (+32 more)
src/game/: anim.c  anim.h  badge.c  badge.h  bag_menu.c  bag_menu.h  battle_transition.c  battle_transition.h  bicycle.c  bicycle.h  bills_house_scripts.c  bills_house_scripts.h  celadon_city_scripts.c  celadon_city_scripts.h  cerulean_scripts.c  cerulean_scripts.h  constants.h  debug_cli.c  debug_cli.h  debug_overlay.c  debug_overlay.h  elevator_menu.c  elevator_menu.h  field_moves.c  field_moves.h  fighting_dojo_scripts.c  fighting_dojo_scripts.h  game.c  game_corner_scripts.c  game_corner_scripts.h  gate_scripts.c  gate_scripts.h  gym_scripts.c  gym_scripts.h  intro.c  intro.h  inventory.c  inventory.h  main_menu.c  main_menu.h  (+84 more)
src/platform/: audio.c  audio.h  compiler.h  display.c  display.h  hardware.h  input.c  input.h  no_avx512.h  save.c  save.h
tests/: main.c  stubs.c  test_battle_catch.c  test_battle_core.c  test_battle_damage.c  test_battle_effects.c  test_battle_init.c  test_battle_items.c  test_battle_loop.c  test_battle_switch.c  test_battle_trainer.c  test_map.c  test_move_anim.c  test_player.c  test_pokemon_storage.c  test_runner.c  test_runner.h  test_text.c  test_warp.c  test_wild.c
tools/: README.md  bio_architect_v31.py  bug_report.py  extract_audio.py  extract_connections.py  extract_cries.py  extract_data.py  extract_events.py  extract_font.py  extract_intro_scene.py  extract_items.py  extract_maps.py  extract_move_anim_tiles.py  extract_move_sfx.py  extract_move_sfx_structs.py  extract_party_icons.py  extract_player_sprite.py  extract_pokemon.py  extract_splash_screen.py  extract_sprites.py  extract_title_screen.py  extract_town_map.py  extract_trainer_sprites.py  extract_trainers.py  game_cli.py  game_cli_commands.md  gen_dex_data.py  gen_event_constants.js  gen_tmhm_data.py  import_moves_data.py  launch_game.sh  omni_healer.py  patch_tmhm.py  teleport_lift_key_grunt.ps1  transform_coords.py
tools/data/: extract_evos.py  extract_pokemon_sprites.py
(+28 files in other folders)
